k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker-app
  template:
    metadata:
      labels:
        app: expense-tracker-app
    spec:
      containers:
        - name: app
          image: laly9999/expense-tracker-app:latest
          ports:
            - containerPort: 80
