k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker-db
  template:
    metadata:
      labels:
        app: expense-tracker-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
